--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,15 @@
 <html lang="pt-br">
 <head>
   <meta charset="utf-8">
-  <title>Sem Barreiras</title>
+  <title>Sem Barreiras - Encontre Estabelecimentos Acessíveis</title>
+  <meta name="description" content="Descubra estabelecimentos acessíveis perto de você. Encontre mercados, salões de beleza, clínicas e muitos outros estabelecimentos acessíveis.">
+  <link rel="canonical" href="https://sembarreiras.unze.com.br">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <noscript>Este site só funciona em navegadores modernos. Recomendamos tentar acessar novamente pelo Google Chrome.</noscript>
   <app-root></app-root>
 </body>
 </html>
