--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Sem Barreiras - Encontre Estabelecimentos com Design Inclusivo</title>
+  <title>Conecta Sem Barreiras - Seu canal de opinião</title>
   <meta name="description"
     content="Descubra estabelecimentos com design inclusivo perto de você. Encontre mercados, salões de beleza, clínicas e muitos outros estabelecimentos acessíveis.">
   <link rel="canonical" href="https://sembarreiras.unze.com.br">
