--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,15 @@
   <script>
     new window.VLibras.Widget('https://vlibras.gov.br/app');
   </script>
+  <script src="https://cdn.jsdelivr.net/gh/mickidum/acc_toolbar/acctoolbar/acctoolbar.min.js"></script>
+  <script>
+    window.onload = function() {
+      window.micAccessTool = new MicAccessTool({
+        buttonPosition: 'right',
+        forceLang: 'pt-BR'
+      });
+    }
+  </script>
 </body>
 
 </html>
