feat: micaccess tool

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
   <script>
     window.onload = function() {
       window.micAccessTool = new MicAccessTool({
-        buttonPosition: 'right',
+        buttonPosition: 'left',
         forceLang: 'pt-BR'
       });
     }
